write report, fix missing logic on DiskManager's state machine

--- a/Desktop/src/main/resources/help.html
+++ b/Desktop/src/main/resources/help.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-Check BITNP's wiki for computer repair knowledge(this website can be accessed only when you are using campus' network, aka BIT-Web and BIT-Mobile).
+Check BITNP's wiki for computer repair knowledge(connect to campus' network to access this website, aka BIT-Web and BIT-Mobile).
 
 <br>
 
